--- a/index.html
+++ b/index.html
@@ -5,167 +5,269 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WILDROOT — Herbal Honey Syrup</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --green-dark: #0F2A1D;
-      --green-main: #143D2B;
-      --honey: #D4A017;
-      --cream: #F5F1E0;
-      --lime: #9ED36A;
+    :root{
+      --bg:#0F2A1D;
+      --bg-light:#607b3c;
+      --text:#F5F1E0;
+      --text-dark:#0F2A1D;
+      --accent:#D4A017;
+      --accent-soft:#9ED36A;
+      --card:rgba(255,255,255,0.08);
     }
 
-    * { margin:0; padding:0; box-sizing:border-box; }
+    *{box-sizing:border-box;margin:0;padding:0}
 
-    body {
+    body{
       font-family:'IBM Plex Sans',sans-serif;
-      background:var(--green-dark);
-      color:var(--cream);
+      background:var(--bg);
+      color:var(--text);
       line-height:1.6;
+      overflow-x:hidden;
     }
 
-    a { color:inherit; text-decoration:none; }
+    body.light{
+      background:var(--bg-light);
+      color:var(--text-dark);
+    }
 
-    header {
-      position:fixed; top:0; width:100%; z-index:10;
-      background:rgba(15,42,29,0.9); backdrop-filter:blur(6px);
-      display:flex; justify-content:space-between; align-items:center;
+    a{text-decoration:none;color:inherit}
+
+    /* HEADER */
+    header{
+      position:fixed;top:0;left:0;width:100%;z-index:10;
+      display:flex;justify-content:space-between;align-items:center;
       padding:14px 20px;
+      background:rgba(15,42,29,0.9);
+      backdrop-filter:blur(6px);
     }
 
-    .brand { font-family:'Cormorant Garamond',serif; letter-spacing:4px; }
+    body.light header{background:rgba(96,123,60,0.9)}
 
-    .lang-toggle button {
-      background:none; border:1px solid var(--cream);
-      color:var(--cream); padding:4px 10px; margin-left:6px;
-      cursor:pointer; font-size:12px;
+    .brand{
+      font-family:'Cormorant Garamond',serif;
+      letter-spacing:4px;
+      font-size:18px;
     }
 
-    .lang-toggle button.active {
-      background:var(--cream); color:var(--green-dark);
+    .controls{display:flex;gap:8px}
+
+    .btn{
+      border:1px solid var(--accent);
+      color:var(--accent);
+      background:transparent;
+      padding:6px 12px;
+      font-size:12px;
+      cursor:pointer;
+      transition:.25s;
     }
 
-    .hero {
+    .btn:hover{
+      background:var(--accent);
+      color:var(--bg);
+    }
+
+    .btn.active{
+      background:var(--accent);
+      color:var(--bg);
+    }
+
+    /* HERO */
+    .hero{
       min-height:100vh;
-      display:flex; flex-direction:column; justify-content:center; align-items:center;
-      text-align:center; padding:100px 20px 40px;
+      display:flex;flex-direction:column;justify-content:center;align-items:center;
+      text-align:center;
+      padding:100px 20px 60px;
+      position:relative;
     }
 
-    .logo {
+    .logo{
       font-family:'Cormorant Garamond',serif;
-      font-size:clamp(40px,8vw,72px);
-      letter-spacing:6px; margin-bottom:16px;
+      font-size:clamp(44px,8vw,72px);
+      letter-spacing:6px;
+      margin-bottom:16px;
     }
 
-    .tagline { max-width:640px; opacity:0.9; margin-bottom:32px; }
+    .tagline{max-width:620px;opacity:.9;margin-bottom:32px}
 
-    .cta {
-      padding:14px 36px; border:1px solid var(--honey); color:var(--honey);
-      transition:0.3s;
+    .cta{
+      border:1px solid var(--accent);
+      color:var(--accent);
+      padding:14px 36px;
+      font-size:14px;
+      transition:.3s;
     }
 
-    .cta:hover { background:var(--honey); color:var(--green-dark); }
+    .cta:hover{background:var(--accent);color:var(--bg)}
 
-    section { padding:80px 20px; max-width:1100px; margin:auto; }
+    /* SECTIONS */
+    section{padding:80px 20px;max-width:1100px;margin:auto}
 
-    h2 {
+    h2{
+      text-align:center;
       font-family:'Cormorant Garamond',serif;
-      font-size:38px; margin-bottom:24px; letter-spacing:2px;
+      font-size:34px;
+      margin-bottom:30px;
+    }
+
+    /* PRODUCT SWIPE */
+    .product{
+      display:flex;flex-direction:column;align-items:center;gap:20px;
+    }
+
+    .swiper{
+      width:220px;height:420px;
+      overflow:hidden;
+      position:relative;
+      touch-action:pan-y;
+    }
+
+    .arrow{
+      position:absolute;
+      top:50%;
+      transform:translateY(-50%);
+      background:transparent;
+      color:var(--text);
+      border:1px solid rgba(255,255,255,0.35);
+      font-size:28px;
+      padding:4px 10px;
+      cursor:pointer;
+      transition:.25s;
+      z-index:2;
+      backdrop-filter:blur(2px);
+    }
+
+    body.light .arrow{
+      color:var(--text-dark);
+      border-color:rgba(0,0,0,0.25);
+    }
+
+    .arrow:hover{
+      background:rgba(255,255,255,0.08);
+    }
+
+    body.light .arrow:hover{
+      background:rgba(0,0,0,0.05);
+    }
+
+    .arrow.left{left:6px}
+    .arrow.right{right:6px}
+
+    /* swiper container */
+    .swiper{
+      width:220px;height:420px;
+      overflow:hidden;
+      position:relative;
+      touch-action:pan-y;
+    }
+
+    .slides{
+      display:flex;
+      transition:transform .4s ease;
+    }
+
+    .slide{
+      min-width:220px;height:420px;
+      display:flex;align-items:center;justify-content:center;
+    }
+
+    .slide img{max-height:100%}
+
+    .edition{
+      font-size:13px;
+      letter-spacing:2px;
+      text-transform:uppercase;
+      opacity:.8;
+    }
+
+    .product-desc{
+      max-width:520px;
       text-align:center;
     }
 
-    /* PRODUCT SWITCHER */
-    .product-switcher {
-      display:flex; flex-direction:column; align-items:center; gap:24px;
-    }
-
-    .product-image {
-      width:220px; height:420px;
-      background:rgba(255,255,255,0.05);
-      display:flex; align-items:center; justify-content:center;
-    }
-
-    .product-image img { max-height:100%; }
-
-    .switch-buttons {
-      display:flex; gap:12px;
-    }
-
-    .switch-buttons button {
-      background:none; border:1px solid var(--lime); color:var(--lime);
-      padding:6px 14px; cursor:pointer;
-    }
-
-    .switch-buttons button.active {
-      background:var(--lime); color:var(--green-dark);
-    }
-
-    .product-desc { max-width:520px; text-align:center; }
-
     /* HOW TO DRINK */
-    .grid {
-      display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-      gap:30px;
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+      gap:24px;
     }
 
-    .card {
-      border:1px solid rgba(255,255,255,0.12);
+    .card{
+      background:var(--card);
       padding:24px;
+      border:1px solid rgba(255,255,255,0.12);
     }
 
-    footer {
-      border-top:1px solid rgba(255,255,255,0.1);
-      padding:40px 20px; text-align:center;
+    body.light .card{border-color:rgba(0,0,0,0.1)}
+
+    /* FOOTER */
+    footer{
+      border-top:1px solid rgba(255,255,255,0.15);
+      padding:40px 20px;
+      text-align:center;
     }
 
-    .socials { display:flex; justify-content:center; gap:20px; margin-bottom:16px; }
+    .socials{display:flex;justify-content:center;gap:20px;margin-bottom:16px}
 
-    @media (max-width:600px) {
-      .product-image { width:180px; height:340px; }
-      h2 { font-size:30px; }
+    /* SNOW */
+    .snow{
+      position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1;
+    }
+
+    @media(max-width:600px){
+      .swiper{width:180px;height:340px}
+      .slide{min-width:180px;height:340px}
+      h2{font-size:28px}
     }
   </style>
 </head>
 <body>
 
+<canvas class="snow"></canvas>
+
 <header>
   <div class="brand">WILDROOT</div>
-  <div class="lang-toggle">
-    <button id="uaBtn" class="active">UA</button>
-    <button id="enBtn">EN</button>
+  <div class="controls">
+    <button class="btn active" id="uaBtn">UA</button>
+    <button class="btn" id="enBtn">EN</button>
+    <button class="btn" id="themeBtn">☀️ / 🌙</button>
   </div>
 </header>
 
 <div class="hero">
   <div class="logo">WILDROOT</div>
-  <p class="tagline" id="tagline">Крафтовий травʼяний медовий сироп. Коріння, трава і гірчинка.</p>
+  <p class="tagline" id="tagline">Крафтовий травʼяний медовий сироп з характером</p>
   <a href="#product" class="cta" id="cta">ДІЗНАТИСЯ БІЛЬШЕ</a>
 </div>
 
 <section id="product">
-  <h2 id="productTitle">Лінійка</h2>
-  <div class="product-switcher">
-    <div class="product-image">
-      <img id="productImg" src="png_winter.png" alt="product">
+  <h2 id="productTitle">Editions</h2>
+  <div class="product">
+
+    <div class="swiper" id="swiper">
+      <button class="arrow left" id="prev">&#10094;</button>
+      <div class="slides" id="slides">
+        <div class="slide"><img src="png_winter.png" alt="Winter"></div>
+        <div class="slide"><img src="png_summer.png" alt="Summer"></div>
+      </div>
+          <button class="arrow right" id="next">&#10095;</button>
     </div>
-    <div class="switch-buttons">
-      <button class="active" onclick="setProduct('winter')">Winter</button>
-      <button onclick="setProduct('summer')">Summer</button>
-    </div>
-    <p class="product-desc" id="productDesc">
-      Глибокий, пряний і зігріваючий профіль з корінням та спеціями.
-    </p>
+
+    <div class="edition" id="edition">WINTER EDITION</div>
+    <p class="product-desc" id="productDesc"></p>
+
   </div>
 </section>
 
 <section>
-  <h2 id="drinkTitle">Як пити</h2>
+  <h2 id="drinkTitle">How to drink</h2>
   <div class="grid">
-    <div class="card">30 мл WILDROOT + тонік + лід</div>
-    <div class="card">Spritz з ігристим</div>
-    <div class="card">Безалкогольний аперитив</div>
+    <div class="card">30 ml WILDROOT + tonic + ice</div>
+    <div class="card">Spritz-style cocktail</div>
+    <div class="card">Non-alcoholic aperitif</div>
   </div>
 </section>
 
@@ -179,56 +281,86 @@
 </footer>
 
 <script>
-  const data = {
-    ua: {
-      tagline: 'Крафтовий травʼяний медовий сироп. Коріння, трава і гірчинка.',
-      cta: 'ДІЗНАТИСЯ БІЛЬШЕ',
-      productTitle: 'Лінійка',
-      drinkTitle: 'Як пити',
-      winter: 'Глибокий, пряний і зігріваючий профіль з корінням та спеціями.',
-      summer: 'Свіжий, цитрусово-травʼяний профіль для теплих днів.'
-    },
-    en: {
-      tagline: 'Craft herbal honey syrup. Roots, herbs and bitterness.',
-      cta: 'LEARN MORE',
-      productTitle: 'Range',
-      drinkTitle: 'How to drink',
-      winter: 'Deep, spicy and warming profile with roots and botanicals.',
-      summer: 'Fresh citrus-herbal profile made for warm days.'
-    }
+  /* DATA */
+  const copy={
+    ua:{tagline:"Крафтовий травʼяний медовий сироп з характером",cta:"ДІЗНАТИСЯ БІЛЬШЕ",productTitle:"Editions",drinkTitle:"Як пити",winter:"Глибокий, пряний та зігріваючий профіль з корінням і спеціями.",summer:"Свіжий, цитрусово-травʼяний профіль для теплих днів."},
+    en:{tagline:"Craft herbal honey syrup with character",cta:"LEARN MORE",productTitle:"Editions",drinkTitle:"How to drink",winter:"Deep, spicy and warming profile with roots and botanicals.",summer:"Fresh citrus-herbal profile for warm days."}
   };
 
-  let currentLang = 'ua';
-  let currentProduct = 'winter';
+  let lang='ua';
+  let index=0;
 
-  function setLang(lang) {
-    currentLang = lang;
-    document.getElementById('tagline').innerText = data[lang].tagline;
-    document.getElementById('cta').innerText = data[lang].cta;
-    document.getElementById('productTitle').innerText = data[lang].productTitle;
-    document.getElementById('drinkTitle').innerText = data[lang].drinkTitle;
+  const swiper = document.getElementById('swiper');
+  const prev = document.getElementById('prev');
+  const next = document.getElementById('next');
+
+  const slides=document.getElementById('slides');
+  const edition=document.getElementById('edition');
+  const desc=document.getElementById('productDesc');
+
+  function updateProduct(){
+    slides.style.transform=`translateX(-${index*100}%)`;
+    const key=index===0?'winter':'summer';
+    edition.innerText=key.toUpperCase()+" EDITION";
+    desc.innerText=copy[lang][key];
+  }
+
+  /* SWIPE */
+
+  const totalSlides = 2;
+
+
+  function nextSlide() {
+  index = (index + 1) % totalSlides;
+  updateProduct();
+}
+
+function prevSlide() {
+  index = (index - 1 + totalSlides) % totalSlides;
+  updateProduct();
+}
+
+next.addEventListener('click', nextSlide);
+prev.addEventListener('click', prevSlide);
+
+/* SWIPE */
+let startX = 0;
+
+swiper.addEventListener('touchstart', e => {
+  startX = e.touches[0].clientX;
+});
+
+swiper.addEventListener('touchend', e => {
+  const diff = e.changedTouches[0].clientX - startX;
+  if (diff < -40) nextSlide();
+  if (diff > 40) prevSlide();
+});
+
+
+  /* LANGUAGE */
+  uaBtn.onclick=()=>{lang='ua';uaBtn.classList.add('active');enBtn.classList.remove('active');applyLang();};
+  enBtn.onclick=()=>{lang='en';enBtn.classList.add('active');uaBtn.classList.remove('active');applyLang();};
+
+  function applyLang(){
+    tagline.innerText=copy[lang].tagline;
+    cta.innerText=copy[lang].cta;
+    productTitle.innerText=copy[lang].productTitle;
+    drinkTitle.innerText=copy[lang].drinkTitle;
     updateProduct();
-    uaBtn.classList.toggle('active', lang === 'ua');
-    enBtn.classList.toggle('active', lang === 'en');
   }
 
-  function setProduct(p) {
-    currentProduct = p;
-    updateProduct();
-    document.querySelectorAll('.switch-buttons button').forEach(b=>b.classList.remove('active'));
-    event.target.classList.add('active');
-  }
+  /* THEME */
+  themeBtn.onclick=()=>document.body.classList.toggle('light');
 
-  function updateProduct() {
-    productDesc.innerText = data[currentLang][currentProduct];
-    productImg.src = currentProduct === 'winter'
-      ? 'png_winter.png'
-      : 'png_summer.png';
-  }
+  /* SNOW */
+  const canvas=document.querySelector('.snow');
+  const ctx=canvas.getContext('2d');
+  let w,h;function resize(){w=canvas.width=window.innerWidth;h=canvas.height=window.innerHeight}
+  window.addEventListener('resize',resize);resize();
+  const flakes=[...Array(80)].map(()=>({x:Math.random()*w,y:Math.random()*h,r:Math.random()*2+1,s:Math.random()*1+0.5}));
+  function snow(){ctx.clearRect(0,0,w,h);ctx.fillStyle='rgba(255,255,255,0.6)';ctx.beginPath();flakes.forEach(f=>{ctx.moveTo(f.x,f.y);ctx.arc(f.x,f.y,f.r,0,Math.PI*2);f.y+=f.s;if(f.y>h)f.y=0});ctx.fill();requestAnimationFrame(snow)}snow();
 
-  uaBtn.onclick = () => setLang('ua');
-  enBtn.onclick = () => setLang('en');
+  updateProduct();
 </script>
-
 </body>
 </html>
