--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 <header>
   <a href="#" class="brand-container">
-      <img src="logo.png" alt="Logo" class="brand-img">
+      <img src="logo.svg" alt="Logo" class="brand-img">
       <span class="brand-text">BRAND NAME</span>
   </a>
 
@@ -305,7 +305,7 @@
 </div>
 
 <div class="hero">
-  <img src="logo.png" alt="Logo" class="logo-img">
+  <img src="logo.svg" alt="Logo" class="logo-img">
   <div class="hero-brand-text">BRAND NAME</div>
   <p id="tagline" style="margin-bottom: 30px;"></p>
   <a href="#product" class="cta" id="heroBtn" style="border-radius:50px; text-decoration: none; display: inline-block;">ДІЗНАТИСЯ БІЛЬШЕ</a>
@@ -337,8 +337,8 @@
   <h2 id="drinkTitle"></h2>
   <div class="grid">
     <div class="card"><div class="card-img"><img src="icon1.png" alt="" onerror="this.style.display='none'"></div><p id="drink1"></p></div>
-    <div class="card"><div class="card-img"><img src="icon2.png" alt="" onerror="this.style.display='none'"></div><p id="drink2"></p></div>
-    <div class="card"><div class="card-img"><img src="icon3.png" alt="" onerror="this.style.display='none'"></div><p id="drink3"></p></div>
+    <div class="card"><div class="card-img"><img src="icon1.png" alt="" onerror="this.style.display='none'"></div><p id="drink2"></p></div>
+    <div class="card"><div class="card-img"><img src="icon1.png" alt="" onerror="this.style.display='none'"></div><p id="drink3"></p></div>
   </div>
 </section>
 
@@ -363,7 +363,7 @@
       productTitle: "Колекції", drinkTitle: "Мистецтво споживання", change: "Змінити смак",
       winter: "Зимова казка у пляшці. Глибокий смак темного меду поєднаний з зігріваючою корицею, бодяном та пікантним коренем імбиру. Ідеальний компаньйон для затишних вечорів, гарячого чаю або авторського глінтвейну.",
       summer: "Подих літнього вітру. Легкий та освіжаючий букет з лугових трав, прохолодної м'яти та соковитого лайма на основі ніжного квіткового меду. Додає вишуканості лимонадам та легким аперитивам у спекотний день.",
-      editionSuffix: "ЕДИЦІЯ",
+      editionSuffix: "ВЕРСІЯ",
       drink1: "CLASSIC TONIC: Наповніть келих льодом. Додайте 30 мл сиропу та 150 мл якісного тоніка. Прикрасьте гілочкою розмарину.",
       drink2: "MOON SPRITZ: Змішайте 40 мл сиропу з 60 мл ігристого вина (Prosecco) та сплешем газованої води. Подавайте зі слайсом апельсина.",
       drink3: "NATURE SOUR: У шейкері збийте 30 мл сиропу, 20 мл лимонного соку та лід. Процідіть у охолоджений келих для ідеального безалкогольного коктейлю."
@@ -520,4 +520,3 @@
 
 </body>
 </html>
-
