--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       color: var(--text-light);
       line-height: 1.6;
       overflow-x: hidden;
-      transition: background-color 0.4s ease, color 0.3s ease;
+      /* Плавний перехід кольору без "важких" ефектів */
+      transition: background-color 0.5s ease, color 0.3s ease;
       position: relative;
-      will-change: background-color;
     }
 
     /* --- ЛОГІКА ТЕМ --- */
@@ -51,23 +51,6 @@
     
     h1, h2, h3, .edition { font-family: var(--font-heading); }
 
-    /* --- ОПТИМІЗОВАНА МАТОВА ТЕКСТУРА --- */
-    .bg-matte {
-        position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-        z-index: -1; pointer-events: none;
-        opacity: 0.4; 
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.15'/%3E%3C/svg%3E");
-    }
-    
-    /* ВІНЬЄТКА (ЗМІНЕНО: світліша) */
-    .bg-vignette {
-        position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-        z-index: -1; pointer-events: none;
-        background: radial-gradient(circle at 50% 50%, rgba(0,0,0,0) 30%, rgba(0,0,0,0.4) 100%);
-        opacity: 0.3; /* Було 0.6, тепер набагато світліше */
-    }
-    body.light .bg-vignette { opacity: 0.15; }
-
     /* 2. РОЗДІЛЮВАЧ */
     .section-divider {
         display: flex; align-items: center; justify-content: center;
@@ -88,6 +71,7 @@
       position: fixed; top: 0; left: 0; width: 100%; z-index: 50;
       display: flex; justify-content: space-between; align-items: center;
       padding: 14px 20px; 
+      /* Backdrop-filter залишаємо тільки на малих елементах, це не повинно гальмувати */
       background: rgba(15, 42, 29, 0.95); backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
       border-bottom: 1px solid var(--accent);
@@ -232,8 +216,6 @@
 </head>
 <body>
 
-<div class="bg-matte"></div>
-<div class="bg-vignette"></div>
 <canvas class="snow"></canvas>
 
 <header>
